# subitopy

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/subitopy/: __init__.py  classes.py  errors.py  search_api.py  utils.py
tests/: search_test.py
