[project]
name = "subitopy"
version = "0.2.0"
description = "An async wrapper for the subito.it API"
authors = [
    {name = "flalugli",email = "flugli@mail.com"}
]
license = {text = "GNU AGPL"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)",
    "async-lru (>=2.0.4,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
